{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 152,
  "lineage": "2661bb21-53ee-9981-65ad-f81bd8d00b3d",
  "resources": [
    {
      "module": "module.new_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011e48799a29115e9",
            "arn": "arn:aws:ec2:us-east-1:064212634025:instance/i-0fd07eda0eba61a6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd07eda0eba61a6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0999abe60bc299a1a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0999abe60bc299a1a",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "public_ip": "44.217.207.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c33c0d6866bec298",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abdd3580748bd9f1",
            "tags": {
              "Name": "THIS IS THE DEFAULT"
            },
            "tags_all": {
              "Name": "THIS IS THE DEFAULT"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aac8227b1e8724b6"
            ]
          },
          "dependencies": [
            "module.new_ec2_instance.data.aws_ami.ubuntu",
            "module.new_vpc.aws_network_interface.new-1",
            "module.new_vpc.aws_security_group.allow_web_",
            "module.new_vpc.aws_subnet.server_12",
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "new_eoig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0ab2004611eedaed6",
            "vpc_id": "vpc-02f4bca665c278fa7"
          },
          "dependencies": [
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07723c324c6097e14",
            "associate_with_private_ip": "10.0.2.100",
            "association_id": "eipassoc-04cb6f2c1bf2fc268",
            "domain": "vpc",
            "id": "eipalloc-07723c324c6097e14",
            "instance": "i-0fd07eda0eba61a6c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0999abe60bc299a1a",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_ip": "10.0.2.100",
            "public_dns": "ec2-44-217-207-2.compute-1.amazonaws.com",
            "public_ip": "44.217.207.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.new_ec2_instance.aws_instance.web",
            "module.new_ec2_instance.data.aws_ami.ubuntu",
            "module.new_vpc.aws_internet_gateway.gw",
            "module.new_vpc.aws_network_interface.new-1",
            "module.new_vpc.aws_security_group.allow_web_",
            "module.new_vpc.aws_subnet.server_12",
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064212634025:internet-gateway/igw-027d847873fb446c5",
            "id": "igw-027d847873fb446c5",
            "owner_id": "064212634025",
            "tags": {
              "Name": "this is the default"
            },
            "tags_all": {
              "Name": "this is the default"
            },
            "vpc_id": "vpc-02f4bca665c278fa7"
          },
          "dependencies": [
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "new-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064212634025:network-interface/eni-0999abe60bc299a1a",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f670738fbea00a0e",
                "device_index": 0,
                "instance": "i-0fd07eda0eba61a6c"
              }
            ],
            "id": "eni-0999abe60bc299a1a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:20:01:83:9d:91",
            "owner_id": "064212634025",
            "private_ip": "10.0.2.100",
            "private_ip_list": [
              "10.0.2.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0aac8227b1e8724b6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abdd3580748bd9f1"
          },
          "dependencies": [
            "module.new_vpc.aws_security_group.allow_web_",
            "module.new_vpc.aws_subnet.server_12",
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "server_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064212634025:route-table/rtb-06af14e3fa22c66d5",
            "id": "rtb-06af14e3fa22c66d5",
            "owner_id": "064212634025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0ab2004611eedaed6",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027d847873fb446c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "this is the default"
            },
            "tags_all": {
              "Name": "this is the default"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f4bca665c278fa7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new_vpc.aws_egress_only_internet_gateway.new_eoig",
            "module.new_vpc.aws_internet_gateway.gw",
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "server_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089bcb5c0292922f2",
            "route_table_id": "rtb-06af14e3fa22c66d5",
            "subnet_id": "subnet-0abdd3580748bd9f1"
          },
          "dependencies": [
            "module.new_vpc.aws_egress_only_internet_gateway.new_eoig",
            "module.new_vpc.aws_internet_gateway.gw",
            "module.new_vpc.aws_route_table.server_12",
            "module.new_vpc.aws_subnet.server_12",
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064212634025:security-group/sg-0aac8227b1e8724b6",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aac8227b1e8724b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "064212634025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "THIS IS THE DEFAULT"
            },
            "tags_all": {
              "Name": "THIS IS THE DEFAULT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f4bca665c278fa7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "server_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064212634025:subnet/subnet-0abdd3580748bd9f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abdd3580748bd9f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064212634025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "value"
            },
            "tags_all": {
              "Name": "value"
            },
            "vpc_id": "vpc-02f4bca665c278fa7"
          },
          "dependencies": [
            "module.new_vpc.aws_vpc.server_12"
          ]
        }
      ]
    },
    {
      "module": "module.new_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "server_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064212634025:vpc/vpc-02f4bca665c278fa7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098acd6e73b6d05d3",
            "default_route_table_id": "rtb-00020ae9809755fb8",
            "default_security_group_id": "sg-071dd0dcab4647240",
            "dhcp_options_id": "dopt-0bddaefcc45f453d4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f4bca665c278fa7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00020ae9809755fb8",
            "owner_id": "064212634025",
            "tags": {
              "Name": "This is the default tag name"
            },
            "tags_all": {
              "Name": "This is the default tag name"
            }
          }
        }
      ]
    }
  ]
}